--- a/visualizations/index.html
+++ b/visualizations/index.html
@@ -1,322 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <title>Zoning Reform Dashboard — Prototype</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8" />
+    <title>Zoning Reform Dashboard — Prototype</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <!-- Base styles -->
-  <style>
-    :root {
-      --bg: #0f172a;
-      --card: #111827;
-      --text: #e5e7eb;
-      --muted: #9ca3af;
-      --border: #1f2937;
-      --accent: #93c5fd;
-    }
+    <!-- Styles -->
+    <style>
+        body { margin:0; background:#0f172a; color:#e5e7eb; font-family:system-ui; }
+        .container { max-width:1400px; margin:0 auto; padding:20px; }
+        .card { background:#111827; border:1px solid #1f2937; padding:18px; border-radius:12px; margin-bottom:20px; }
+        table { width:100%; border-collapse:collapse; }
+        th, td { padding:8px; border-bottom:1px solid #1f2937; font-size:14px; text-align:left; }
+        th { color:#9ca3af; }
+        #map { width:100%; height:600px; }
 
-    html, body {
-      margin:0; padding:0;
-      background:var(--bg);
-      color:var(--text);
-      font:16px/1.4 system-ui, -apple-system, Segoe UI, Roboto;
-    }
+        /* NEW: Tooltip */
+        .mapTooltip {
+            position:absolute;
+            background:#111827;
+            color:#e5e7eb;
+            padding:8px 12px;
+            border:1px solid #1f2937;
+            border-radius:8px;
+            pointer-events:none;
+            font-size:13px;
+            z-index:9999;
+        }
+    </style>
 
-    header {
-      padding:20px 24px;
-      border-bottom:1px solid var(--border);
-    }
-
-    h1 { margin:0; font-size:20px; }
-
-    .pill {
-      font-size:12px;
-      color:var(--muted);
-      margin-top:4px;
-    }
-
-    .container {
-      padding:24px;
-      max-width:1400px;
-      margin:0 auto;
-    }
-
-    .card {
-      background:var(--card);
-      border:1px solid var(--border);
-      border-radius:14px;
-      padding:16px;
-      margin-bottom:20px;
-    }
-
-    .summary {
-      display:grid;
-      grid-template-columns:repeat(3,1fr);
-      gap:14px;
-    }
-
-    .summary-cell .label {
-      font-size:12px;
-      color:var(--muted);
-    }
-
-    .summary-cell .value {
-      margin-top:4px;
-      font-size:20px;
-      font-weight:600;
-    }
-
-    table {
-      width:100%; border-collapse:collapse;
-      color:var(--text);
-    }
-
-    th, td {
-      padding:10px;
-      border-bottom:1px solid var(--border);
-      text-align:left;
-      font-size:13px;
-    }
-
-    th {
-      cursor:pointer;
-      color:var(--muted);
-    }
-
-    .neg { color:#fca5a5; }
-    .pos { color:#86efac; }
-
-    .top-controls {
-      display:flex;
-      gap:14px;
-      align-items:center;
-      flex-wrap:wrap;
-      margin-bottom:10px;
-    }
-
-    select {
-      background:#1e293b !important;
-      color:var(--text);
-      border:1px solid var(--border);
-      border-radius:8px;
-      padding:6px 10px;
-      font-size:14px;
-    }
-
-    button {
-      background:#2563eb;
-      color:white;
-      border:none;
-      padding:8px 14px;
-      border-radius:8px;
-      cursor:pointer;
-      font-size:14px;
-    }
-
-    #clearBtn {
-      background:#ef4444;
-    }
-
-    #map {
-      border-radius:12px;
-      background:#1e293b;
-    }
-
-    /* Detail panel */
-    #detailPanel {
-      display:grid;
-      grid-template-columns:1fr;
-      gap:12px;
-    }
-
-    .detail-grid {
-      display:grid;
-      grid-template-columns:repeat(4,1fr);
-      gap:10px;
-      margin-bottom:12px;
-    }
-
-    .detail-box {
-      background:#1e293b;
-      border:1px solid #334155;
-      padding:10px;
-      border-radius:8px;
-      text-align:center;
-    }
-
-    .detail-label {
-      font-size:11px;
-      color:var(--muted);
-    }
-
-    .detail-value {
-      margin-top:4px;
-      font-size:18px;
-      font-weight:600;
-    }
-
-    #detailTrend {
-      width:100%;
-      height:150px;
-      background:#1e293b;
-      border-radius:10px;
-      border:1px solid #334155;
-    }
-
-    #detailReformsList {
-      padding-left:16px;
-      font-size:14px;
-      color:var(--text);
-    }
-
-    /* Map legend */
-    .map-legend {
-      margin-top:12px;
-      font-size:11px;
-      color:var(--muted);
-    }
-
-    .map-legend-bar {
-      height:8px;
-      border-radius:999px;
-      border:1px solid #1f2937;
-      background:linear-gradient(to right,#f87171,#facc15,#22c55e);
-    }
-
-    .map-legend-labels {
-      display:flex;
-      justify-content:space-between;
-      margin-top:4px;
-    }
-  </style>
-
-  <!-- External libs -->
-  <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js@4"></script>
-  <script src="https://cdn.jsdelivr.net/npm/topojson-client@3"></script>
-
-  <!-- Dashboard logic -->
-  <script src="./js/main.js" defer></script>
+    <!-- Libraries -->
+    <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
+    <script src="https://cdn.jsdelivr.net/npm/topojson@3"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4"></script>
 </head>
+
 <body>
-
-<header>
-  <h1>Zoning Reform Dashboard — Prototype</h1>
-  <div class="pill">Data source: <code>data/outputs/reform_impact_metrics.csv</code></div>
-
-  <div style="margin-top:10px;">
-    <button id="downloadBtn">⬇️ Download Data (CSV)</button>
-  </div>
-</header>
-
 <div class="container">
 
-  <!-- Top controls -->
-  <div class="card top-controls">
-    <button id="clearBtn">Clear</button>
+    <button id="downloadBtn">Download Data (CSV)</button>
 
-    <label for="jumpJurisdiction">Jump to jurisdiction:</label>
-    <select id="jumpJurisdiction">
-      <option value="__ALL__">All jurisdictions</option>
-    </select>
+    <div class="card" style="display:flex;gap:20px;">
+        <button id="clearBtn">Clear</button>
+        <label>Jump to jurisdiction:</label>
+        <select id="jumpFilter"></select>
+        <label>Filter by reform type:</label>
+        <select id="typeFilter"></select>
+    </div>
 
-    <label for="typeFilter">Filter by reform type:</label>
-    <select id="typeFilter">
-      <option value="__ALL__">All types</option>
-    </select>
-  </div>
-
-  <!-- Summary -->
-  <div class="card">
-    <h3 style="margin-top:0;">Summary</h3>
-    <div id="summary" class="summary"></div>
-  </div>
-
-  <!-- Chart + Table -->
-  <div style="display:grid; grid-template-columns:1fr 1fr; gap:20px;">
     <div class="card">
-      <h3 style="margin-top:0;">Percent change (post vs pre)</h3>
-      <canvas id="barChart" height="260"></canvas>
+        <h3>Summary</h3>
+        <div style="display:flex;gap:25px;">
+            <div>Reforms: <span id="sumReforms"></span></div>
+            <div>Avg % change: <span id="sumAvgPct"></span></div>
+            <div>Effective range: <span id="sumRange"></span></div>
+        </div>
     </div>
 
-    <div class="card" style="overflow:auto; max-height:460px;">
-      <h3 style="margin-top:0;">Reforms table</h3>
+    <div class="card" style="display:flex;gap:20px;">
+        <canvas id="barChart" width="300"></canvas>
 
-      <table id="reformsTable">
-        <thead>
-          <tr>
-            <th data-k="jurisdiction">Jurisdiction</th>
-            <th data-k="reform_name">Reform</th>
-            <th data-k="reform_type">Type</th>
-            <th data-k="effective_date">Effective</th>
-            <th data-k="pre_mean_permits">Pre mean</th>
-            <th data-k="post_mean_permits">Post mean</th>
-            <th data-k="percent_change">Δ %</th>
-            <th data-k="status">Status</th>
-            <th>Trend</th>
-          </tr>
-        </thead>
-        <tbody></tbody>
-      </table>
+        <div style="flex:1;overflow:auto;">
+            <table id="reformsTable">
+                <thead>
+                    <tr>
+                        <th>Jurisdiction</th>
+                        <th>Reform</th>
+                        <th>Type</th>
+                        <th>Effective</th>
+                        <th>Pre mean</th>
+                        <th>Post mean</th>
+                        <th>Δ %</th>
+                        <th>Status</th>
+                        <th>Trend</th>
+                    </tr>
+                </thead>
+                <tbody></tbody>
+            </table>
+        </div>
     </div>
-  </div>
 
-  <!-- Map + Detail -->
-  <div style="display:grid; grid-template-columns:1fr 340px; gap:20px; margin-top:20px;">
-    <!-- Map -->
     <div class="card">
-      <h3 style="margin-top:0;">Reform Impact Map (US States)</h3>
-      <button id="resetMap" style="margin-bottom:10px;">Reset View</button>
-      <svg id="map" width="960" height="600"></svg>
-
-      <div id="mapLegend" class="map-legend">
-        <!-- Filled by JS -->
-      </div>
+        <h3>Reform Impact Map (US States)</h3>
+        <svg id="map"></svg>
     </div>
 
-    <!-- Right detail panel -->
-    <div class="card" id="detailPanel">
-      <h3>State detail</h3>
-      <div style="font-size:13px; color:var(--muted); margin-bottom:10px;">
-        Click a state on the map or pick a jurisdiction above.
-      </div>
-
-      <div class="detail-grid">
-        <div class="detail-box">
-          <div class="detail-label">JURISDICTION</div>
-          <div class="detail-value" id="detailName">—</div>
+    <div class="card">
+        <h3>State detail</h3>
+        <p>Click a state to explore</p>
+        <div>
+            <div>Jurisdiction: <span id="detailState">—</span></div>
+            <div>Avg permits (pre): <span id="detailPre">—</span></div>
+            <div>Avg permits (post): <span id="detailPost">—</span></div>
+            <div>% change: <span id="detailPct">—</span></div>
         </div>
-        <div class="detail-box">
-          <div class="detail-label">AVG PERMITS (PRE)</div>
-          <div class="detail-value" id="detailPre">—</div>
-        </div>
-        <div class="detail-box">
-          <div class="detail-label">AVG PERMITS (POST)</div>
-          <div class="detail-value" id="detailPost">—</div>
-        </div>
-        <div class="detail-box">
-          <div class="detail-label">Δ %</div>
-          <div class="detail-value" id="detailPct">—</div>
-        </div>
-      </div>
-
-      <div class="detail-label" style="margin:6px 0;">MONTHLY PERMITS TREND</div>
-      <svg id="detailTrend"></svg>
-
-      <div class="detail-label" style="margin-top:10px;">REFORMS IN THIS JURISDICTION</div>
-      <ul id="detailReformsList"></ul>
+        <canvas id="stateTrend" height="140"></canvas>
     </div>
-  </div>
 
 </div>
 
-<footer style="text-align:center; padding:30px; font-size:12px; color:var(--muted);">
-  Prototype for local validation. Next: filters, tooltips, and map layer.
-</footer>
-
+<script src="./js/main.js"></script>
 </body>
 </html>
+
 
 
 
